# filck

./: .gitignore  LICENSE  PROJECT_README.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pinned-image.html  popup.html  vite.config.ts  vitest.config.ts
.codebuddy/: rules.md
design/: about-compact-v2.html  about-dialog-v2.html  all-icons-redesign.html  design-proposals.html  help-redesign-v3.html  search-filter-layout.html  tab-alignment-fix.html  tab-ui-mockup.html  theme-preview.html  topbar-icons-redesign.html  tray_popup_preview.html  代码高亮预览.html  文字详情优化预览.html
design-proposals/: UI_redesign_prototype.html  card-contextmenu-preview.html  clipboard-beautify-options.html  extract-snippets-redesign.html  image-ocr-pin-preview.html  image-ocr-select-preview.html  image-preview-redesign.html  padding-fix-options.html  search-icon-fix.html  settings-full-design.html  settings-help-mockup.html  settings-redesign.html  stats-layout.html  stats-panel-designs.html  today-placement.html  tray-popup-preview.html  详情弹窗统一预览.html
docs/: ARCHITECTURE_ANALYSIS.md  AUTO_UPDATE.md  UI_review_report.md  bug-fix-report.md  bug-report.md  extract-snippets-gap-analysis.md  fix_summary_v4.5.md  图片预览与双击行为优化方案.md  详情弹窗统一方案.md
scripts/: generate-updater-json.mjs  sync-version.mjs
src/: App.tsx  main.tsx  popup-main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard_monitor.rs  commands.rs  data_store.rs  hotkey_manager.rs  lan_sync.rs  lib.rs  main.rs  paste_engine.rs  pinned_window.rs  tray_manager.rs  updater.rs
src/lib/: api.ts  (+3 more)
(+30 files in other folders)
