[package]
name = "clipboard-manager-tauri"
version = "4.7.0"
description = "剪贴板管理器 - Tauri 2 Edition"
authors = ["you"]
edition = "2021"

[[bin]]
name = "剪贴板管理"
path = "src/main.rs"

[lib]
name = "clipboard_manager_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
arboard = { version = "3", features = ["image-data"] }
tokio = { version = "1", features = ["full"] }
image = "0.25"
md-5 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
pinyin = "0.5"
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Media_Ocr",
    "Graphics_Imaging",
    "Storage",
    "Storage_Streams",
    "Foundation_Collections",
    "Globalization",
] }
winreg = "0.52"


